...
            SnackBar(content: Text(state.errorMessage!)),
          );
        }
      },
      builder: (context, state) {
        return Scaffold(
          key: const Key('library_screen'),
          appBar: AppBar(
            title: DropdownButtonHideUnderline(
              child: DropdownButton<LibraryViewMode>(
                key: const Key('library_view_mode_dropdown'),
                value: state.viewMode,
                icon: Icon(Icons.arrow_drop_down, color: context.appColors.textPrimary),
                dropdownColor: Theme.of(context).cardColor,
                style: TextStyle(
                  fontSize: 20,
                  fontWeight: FontWeight.bold,
...
