...
          return const SizedBox.shrink();
        }

        final heroTag = 'player_art_${mediaItem.id}';

        return GestureDetector(
          key: const Key('mini_player'),
          onTap: () {
            Navigator.push(
              context,
              PageRouteBuilder(
                pageBuilder: (context, animation, secondaryAnimation) =>
                    PlayerScreen(heroTag: heroTag),
...
